--- a/src/components/ui_component/swipeup/swipeup.component.scss
+++ b/src/components/ui_component/swipeup/swipeup.component.scss
@@ -8,12 +8,11 @@
   top: 0; left: 0;
   z-index: 10;
   width: 100vw;
-  height: 0;
+  height: 100%;
   visibility: hidden;
 }
 
 :host(.open) {
-  height: 100vh;
   visibility: visible;
 }
 
