--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -63,7 +63,7 @@ $icon-padding: 2px;
 //search-bar
 $searchbar-height: 48px;
 $searchbar-icon-size: 24px;
-$searchbar-icon-padding: 8px;
+$searchbar-icon-padding: 12px;
 $searchbar-padding: 16px;
 
 //tab
